--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>42MBTI</title>
 	<link rel="stylesheet" href="./css/index.css">
+	<link rel="stylesheet" href="./css/mobile.css">
 </head>
 <body>
 	<div class="page">
-		<div class="main">
+		<!-- main -->
+		<div class="section main">
 			<div class="main_title">
 				<img src="./img/42_white.png" alt="42">
 				<div class="main_text">
@@ -21,9 +23,121 @@
 				<h2></br></h2>
 				<h2>int main(void)</h2>
 				<h2>{</h2>
-				<h1>start();</h2>
+				<h1 class="next_btn">start();</h1>
+			</div>
+		</div>
+		<!-- sec1 -->
+		<div class="section question q1 hide">
+			<div class="quest_text_box">
+				<h1 class="quest_no">1</h1>
+				<h2 class="quest_text">나는 누군가와 함께 하면 공부가 더 잘 된다.</h2>
+			</div>
+			<div class="quest_select">
+				<input type="radio" name="select1" id="q1_1" value="1" checked>
+				<label for="q1_1">매우 아니다</label>
+				<input type="radio" name="select1" id="q1_2" value="2">
+				<label for="q1_2">아니다</label>
+				<input type="radio" name="select1" id="q1_3" value="3">
+				<label for="q1_3">그렇다</label>
+				<input type="radio" name="select1" id="q1_4" value="4">
+				<label for="q1_4">매우 그렇다</label>
+				<div class="quest_select_bar">
+					<div class="progress"></div>
+				</div>
+			</div>
+			<h1 class="next_btn">next();</h1>
+		</div>
+		<!-- sec2 -->
+		<div class="section question q2 hide">
+			<div class="quest_text_box">
+				<h1 class="quest_no">2</h1>
+				<h2 class="quest_text">나는 42과제에 주어진 내용들을 공부할 때, 나온것보다 조금은 더 깊게 공부하고 싶다.</h2>
+			</div>
+			<div class="quest_select">
+				<input type="radio" name="select2" id="q2_1" value="1" checked>
+				<label for="q2_1">매우 아니다</label>
+				<input type="radio" name="select2" id="q2_2" value="2">
+				<label for="q2_2">아니다</label>
+				<input type="radio" name="select2" id="q2_3" value="3">
+				<label for="q2_3">그렇다</label>
+				<input type="radio" name="select2" id="q2_4" value="4">
+				<label for="q2_4">매우 그렇다</label>
+				<div class="quest_select_bar">
+					<div class="progress"></div>
+				</div>
+			</div>
+			<h1 class="next_btn">next();</h1>
+		</div>
+		<!-- sec3 -->
+		<div class="section question q3 hide">
+			<div class="quest_text_box">
+				<h1 class="quest_no">3</h1>
+				<h2 class="quest_text">나는 모르는 문제가 생기면 주위 동료들과 함께 고민한다.</h2>
+			</div>
+			<div class="quest_select">
+				<input type="radio" name="select3" id="q3_1" value="1" checked>
+				<label for="q3_1">매우 아니다</label>
+				<input type="radio" name="select3" id="q3_2" value="2">
+				<label for="q3_2">아니다</label>
+				<input type="radio" name="select3" id="q3_3" value="3">
+				<label for="q3_3">그렇다</label>
+				<input type="radio" name="select3" id="q3_4" value="4">
+				<label for="q3_4">매우 그렇다</label>
+				<div class="quest_select_bar">
+					<div class="progress"></div>
+				</div>
+			</div>
+			<h1 class="next_btn">next();</h1>
+		</div>
+		<!-- sec4 -->
+		<div class="section question q4 hide">
+			<div class="quest_text_box">
+				<h1 class="quest_no">4</h1>
+				<h2 class="quest_text">나는 내가 배운 내용들을 활용해서 항상 뭔가 새로운걸 만들고 싶다.</h2>
+			</div>
+			<div class="quest_select">
+				<input type="radio" name="select4" id="q4_1" value="1" checked>
+				<label for="q4_1">매우 아니다</label>
+				<input type="radio" name="select4" id="q4_2" value="2">
+				<label for="q4_2">아니다</label>
+				<input type="radio" name="select4" id="q4_3" value="3">
+				<label for="q4_3">그렇다</label>
+				<input type="radio" name="select4" id="q4_4" value="4">
+				<label for="q4_4">매우 그렇다</label>
+				<div class="quest_select_bar">
+					<div class="progress"></div>
+				</div>
+			</div>
+			<h1 class="next_btn">next();</h1>
+		</div>
+		<!-- sec5 -->
+		<div class="section question q5 hide">
+			<div class="quest_text_box">
+				<h1 class="quest_no">5</h1>
+				<h2 class="quest_text">나는 열정있는 팀원과 함께 공부할 수 있는 스터디가 있으면 좋겠다고 생각한다.</h2>
+			</div>
+			<div class="quest_select">
+				<input type="radio" name="select5" id="q5_1" value="1" checked>
+				<label for="q5_1">매우 아니다</label>
+				<input type="radio" name="select5" id="q5_2" value="2">
+				<label for="q5_2">아니다</label>
+				<input type="radio" name="select5" id="q5_3" value="3">
+				<label for="q5_3">그렇다</label>
+				<input type="radio" name="select5" id="q5_4" value="4">
+				<label for="q5_4">매우 그렇다</label>
+				<div class="quest_select_bar">
+					<div class="progress"></div>
+				</div>
+			</div>
+			<h1 class="next_btn">return (0);</h1>
+		</div>
+		<!-- result -->
+		<div class="section question q5 hide">
+			<div class="quest_text_box">
+				<h2 class="quest_text">result</h2>
 			</div>
 		</div>
 	</div>
 </body>
+<script src="./js/index.js"></script>
 </html>
