feat: add open graph meta data

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="op:title" content="42MBTI">
+	<meta property="op:description" content="test test test test">
+	<meta property="op:image" content="./thumbnail.png">
 	<title>42MBTI</title>
 	<link rel="stylesheet" href="./css/index.css">
 	<link rel="stylesheet" href="./css/mobile.css">
