feat: result page

--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="42MBTI">
-	<meta property="og:description" content="test test test test">
-	<meta property="og:image" content="./thumbnail.png">
-	<title>42MBTI</title>
+	<meta property="og:title" content="42 유형 테스트">
+	<meta property="og:description" content="당신은 과연 어떤 유형의 42서울인?">
+	<meta property="og:image" content="./img/thumbnail.png">
+	<title>42 유형 테스트</title>
 	<link rel="stylesheet" href="./css/index.css">
 	<link rel="stylesheet" href="./css/mobile.css">
 </head>
 <body>
 	<div class="page">
 		<!-- main -->
-		<div class="section main">
+		<div class="section main ">
 			<div class="main_title">
 				<img src="./img/42_white.png" alt="42">
 				<div class="main_text">
 					<h1>SEOUL</h1>
-					<h2>심심해서 만들어본 42 서울 MBTI</h2>
+					<h2>당신은 과연 어떤 유형의 42서울인?</h2>
 				</div>
 			</div>
 			<div class="main_start">
@@ -135,9 +135,27 @@
 			<h1 class="next_btn">return (0);</h1>
 		</div>
 		<!-- result -->
-		<div class="section question q5 hide">
-			<div class="quest_text_box">
-				<h2 class="quest_text">result</h2>
+		<div class="section result_section hide">
+			<div class="result hide">
+				<img src="./img/result1.png" alt="genius!">
+				<h1>혼자서도 빛나는 당신...</h1>
+				<h2>독고다이 코딩 스타일 이시군요!</h2>
+				<h2>뭐든지 혼자서 척척 해내는 나는야 천재 개발자!!</h2>
+			</div>
+			<div class="result hide">
+				<img src="./img/result2.png" alt="lee-sin!">
+				<h1>어디로 가야하오...</h1>
+				<h2>독고다이와 협업의 기로에 서있는 당신..</h2>
+				<h2>나의 미래는??</h2>
+			</div>
+			<div class="result hide">
+				<img src="./img/result3.png" alt="penguin!">
+				<h1>함깨할 때 빛나는 당신...</h1>
+				<h2>혼자서는 조금 부족해도 함께라면 아무것도 두렵지 않아!</h2>
+				<h2>나는야 펭귄 개발자!!</h2>
+			</div>
+			<div class="study">
+				<a class="study_btn" href="https://www.notion.so/d9a5ca2ac92749febae6225d8a480705">공부하러 가기</a>
 			</div>
 		</div>
 	</div>
