modify: main text modify stdio.h -> 42.h

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<div class="main_start">
-				<h2>#include &lt;stdio.h&gt;</h2>
+				<h2>#include &lt;42.h&gt;</h2>
 				<h2></br></h2>
 				<h2>int main(void)</h2>
 				<h2>{</h2>
