fix: typing error 함깨 -> 함께

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			</div>
 			<div class="result hide">
 				<img src="./img/result3.png" alt="penguin!">
-				<h1>함깨할 때 빛나는 당신...</h1>
+				<h1>함께할 때 빛나는 당신...</h1>
 				<h2>혼자서는 조금 부족해도 함께라면 아무것도 두렵지 않아!</h2>
 				<h2>나는야 펭귄 개발자!!</h2>
 			</div>
